--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <header id="header">
-        <nav class="navbar navbar-expand-lg custom-bg fixed-top navbar-transparent">
+        <nav id="nav-bar" class="navbar navbar-expand-lg custom-bg fixed-top navbar-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="hero_logo.png" id="header-img" alt="LUNA SEA" width="100" height="auto">
@@ -76,7 +76,7 @@
         </section>
 
         <section id="tour">
-            <div>
+            <div class="tour">
                 <h1>DUAL ARENA TOUR 2023</h1>
                 <div class="row justify-content-center text-center">
                     <div class="col-4 fw-bold">Dates</div>
