--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <main>
 
         <section id="top">
-            <video src="LUNASEA.webm" type="video/webm" autoplay loop playsinline muted poster="LUNASEA.jpg"></video>
-            <video src="LUNASEA.mp4" type="video/mp4" autoplay loop playsinline muted poster="LUNASEA.jpg"></video>
+            <video src="LUNASEA.webm" type="video/webm" autoplay loop playsinline muted
+                poster="MOTHER_STYLE.jpg"></video>
+            <video src="LUNASEA.mp4" type="video/mp4" autoplay loop playsinline muted poster="MOTHER_STYLE.jpg"></video>
         </section>
 
         <section id="shop">
@@ -132,7 +133,7 @@
 
         <section id="contact">
             <div>
-                <h5>Subscribe to LUNA SEA news</h5>
+                <h5>Have you found your STYLE?</h5>
                 <div>
                     <form id="form" action="https://www.freecodecamp.com/email-submit"
                         class="d-flex justify-content-center">
