--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <header id="header">
-        <nav id="nav-bar" class="navbar navbar-expand-lg custom-bg fixed-top">
+        <nav id="nav-bar" class="navbar navbar-expand-lg custom-nav fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="logo.png" id="header-img" alt="LUNA SEA" width="100" height="auto">
