--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 
     <footer id="footer" class="text-center">
         <div>
-            Made by <a href="https://www.linkedin.com/in/katmohd/" target="_blank">Kat</a> | Open-sourced on <a
-                href="https://github.com/katmohd/product-landing-page" target="_blank">GitHub</a>
+            Made by <a href="https://www.linkedin.com/in/web3kat/" target="_blank">Kat</a> | Open-sourced on <a
+                href="https://github.com/web3kat/product-landing-page" target="_blank">GitHub</a>
         </div>
     </footer>
 
